[package]
name = "atomweave"
version = "0.1.0"
description = """
AtomWeave is a space-partitioning library.

This crate is a placeholder while original C implementation is migrated to Rust.
"""
repository = "https://github.com/patha454/AtomWeaveRs"
readme = "README.md"
license = "BSL-1.0"
edition = "2024"

[dependencies]
